Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15066

set pool quota hard limit failed if limit larger than existing user quota soft limit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      fre0111 ~]# lfs setquota -u quota_usr -b 1275232 -B 1338993 -i 87330 -I 91696 /mnt/lustre
      [root@fre0111 ~]# lfs pool_list lustre
      Pools from lustre:
      lustre.glo0
      lustre.glo1
      [root@fre0111 ~]# lfs setquota -u quota_usr -B 200M --pool glo1 /mnt/lustre
      [root@fre0111 ~]# echo $?
      22
      [root@fre0111 ~]# 
       

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: