LU-15066 utils: do not inherit limits from global pool

lfs_setquota retrieves quota limits from the server
before setting new ones. It is needed to do not overwrite
already set limits. Before the patch limits were retrieved
only from global pool, despite the fact that new limit should
be set to a specific pool. Thus, setting only hard block limit
to a specific pool, this pool could inherit soft block limit
from the global pool.

HPE-bug-id: LUS-10186
Change-Id: I6fdbf3265f950e39b48a5ad06b059d8aa06a6218
Signed-off-by: Sergey Cheremencev <sergey.cheremencev@hpe.com>
Reviewed-on: https://review.whamcloud.com/45135
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Alexander Boyko <alexander.boyko@hpe.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>